--- a/Draw/Controller/Common/CommonStarryDialog.xib
+++ b/Draw/Controller/Common/CommonStarryDialog.xib
@@ -42,7 +42,6 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{320, 480}</string>
 						<reference key="NSSuperview" ref="887022054"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="59743781"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -58,9 +57,8 @@
 							<object class="IBUIImageView" id="131314975">
 								<reference key="NSNextResponder" ref="59743781"/>
 								<int key="NSvFlags">274</int>
-								<string key="NSFrameSize">{250, 152}</string>
+								<string key="NSFrameSize">{230, 152}</string>
 								<reference key="NSSuperview" ref="59743781"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="887624945"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -72,9 +70,8 @@
 							<object class="IBUIImageView" id="887624945">
 								<reference key="NSNextResponder" ref="59743781"/>
 								<int key="NSvFlags">274</int>
-								<string key="NSFrameSize">{250, 152}</string>
+								<string key="NSFrameSize">{230, 152}</string>
 								<reference key="NSSuperview" ref="59743781"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="629992164"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -82,10 +79,9 @@
 							</object>
 							<object class="IBUILabel" id="629992164">
 								<reference key="NSNextResponder" ref="59743781"/>
-								<int key="NSvFlags">301</int>
-								<string key="NSFrame">{{0, 7}, {250, 29}}</string>
+								<int key="NSvFlags">303</int>
+								<string key="NSFrame">{{0, 7}, {230, 29}}</string>
 								<reference key="NSSuperview" ref="59743781"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="130876593"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -108,20 +104,19 @@
 								<int key="IBUITextAlignment">1</int>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
 									<int key="type">2</int>
-									<double key="pointSize">18</double>
+									<double key="pointSize">16</double>
 								</object>
 								<object class="NSFont" key="IBUIFont">
 									<string key="NSName">Helvetica-Bold</string>
-									<double key="NSSize">18</double>
+									<double key="NSSize">16</double>
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
 							<object class="IBUIButton" id="762229273">
 								<reference key="NSNextResponder" ref="59743781"/>
-								<int key="NSvFlags">301</int>
+								<int key="NSvFlags">300</int>
 								<string key="NSFrame">{{20, 113}, {81, 26}}</string>
 								<reference key="NSSuperview" ref="59743781"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="189298594"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -146,22 +141,22 @@
 									<string key="NSClassName">NSImage</string>
 									<string key="NSResourceName">dialog_frame@2x.png</string>
 								</object>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="49880677">
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="342572003">
 									<int key="type">2</int>
-									<double key="pointSize">15</double>
+									<double key="pointSize">14</double>
 								</object>
-								<object class="NSFont" key="IBUIFont" id="446523499">
+								<object class="NSFont" key="IBUIFont" id="1022259946">
 									<string key="NSName">Helvetica-Bold</string>
-									<double key="NSSize">15</double>
+									<double key="NSSize">14</double>
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
 							<object class="IBUIButton" id="189298594">
 								<reference key="NSNextResponder" ref="59743781"/>
-								<int key="NSvFlags">301</int>
-								<string key="NSFrame">{{149, 113}, {81, 26}}</string>
+								<int key="NSvFlags">297</int>
+								<string key="NSFrame">{{129, 113}, {81, 26}}</string>
 								<reference key="NSSuperview" ref="59743781"/>
-								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
@@ -182,15 +177,14 @@
 									<string key="NSResourceName">dialog_yes.png</string>
 								</object>
 								<reference key="IBUINormalBackgroundImage" ref="422296307"/>
-								<reference key="IBUIFontDescription" ref="49880677"/>
-								<reference key="IBUIFont" ref="446523499"/>
+								<reference key="IBUIFontDescription" ref="342572003"/>
+								<reference key="IBUIFont" ref="1022259946"/>
 							</object>
 							<object class="IBUILabel" id="130876593">
 								<reference key="NSNextResponder" ref="59743781"/>
-								<int key="NSvFlags">301</int>
-								<string key="NSFrame">{{20, 38}, {210, 62}}</string>
+								<int key="NSvFlags">303</int>
+								<string key="NSFrame">{{18, 38}, {193, 62}}</string>
 								<reference key="NSSuperview" ref="59743781"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="762229273"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -209,20 +203,19 @@
 								<int key="IBUILineBreakMode">0</int>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
 									<int key="type">2</int>
-									<double key="pointSize">14</double>
+									<double key="pointSize">13</double>
 								</object>
 								<object class="NSFont" key="IBUIFont">
 									<string key="NSName">Helvetica-Bold</string>
-									<double key="NSSize">14</double>
+									<double key="NSSize">13</double>
 									<int key="NSfFlags">16</int>
 								</object>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
-								<double key="preferredMaxLayoutWidth">210</double>
+								<double key="preferredMaxLayoutWidth">193</double>
 							</object>
 						</array>
-						<string key="NSFrame">{{35, 129}, {250, 152}}</string>
+						<string key="NSFrame">{{55, 129}, {230, 152}}</string>
 						<reference key="NSSuperview" ref="887022054"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="131314975"/>
 						<object class="NSColor" key="IBUIBackgroundColor" id="67415055">
 							<int key="NSColorSpace">3</int>
@@ -234,7 +227,6 @@
 				</array>
 				<string key="NSFrameSize">{320, 460}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="500030287"/>
 				<reference key="IBUIBackgroundColor" ref="67415055"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -354,12 +346,12 @@
 						<int key="objectID">5</int>
 						<reference key="object" ref="59743781"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="189298594"/>
 							<reference ref="131314975"/>
 							<reference ref="887624945"/>
 							<reference ref="762229273"/>
 							<reference ref="130876593"/>
 							<reference ref="629992164"/>
+							<reference ref="189298594"/>
 						</array>
 						<reference key="parent" ref="887022054"/>
 					</object>
@@ -410,7 +402,7 @@
 				<string key="48.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="6.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<real value="2" key="6.IBUIButtonInspectorSelectedEdgeInsetMetadataKey"/>
+				<real value="0.0" key="6.IBUIButtonInspectorSelectedEdgeInsetMetadataKey"/>
 				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<real value="2" key="7.IBUIButtonInspectorSelectedEdgeInsetMetadataKey"/>
 				<string key="8.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -422,95 +414,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">49</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">CommonDialog</string>
-					<string key="superclassName">CommonInfoView</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="backButton">FontButton</string>
-						<string key="contentBackground">UIImageView</string>
-						<string key="frontBackgroundImageView">UIImageView</string>
-						<string key="messageLabel">FontLabel</string>
-						<string key="oKButton">FontButton</string>
-						<string key="titleLabel">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="backButton">
-							<string key="name">backButton</string>
-							<string key="candidateClassName">FontButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="contentBackground">
-							<string key="name">contentBackground</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="frontBackgroundImageView">
-							<string key="name">frontBackgroundImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="messageLabel">
-							<string key="name">messageLabel</string>
-							<string key="candidateClassName">FontLabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="oKButton">
-							<string key="name">oKButton</string>
-							<string key="candidateClassName">FontButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="titleLabel">
-							<string key="name">titleLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/CommonDialog.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">CommonInfoView</string>
-					<string key="superclassName">UIView</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">contentView</string>
-						<string key="NS.object.0">UIView</string>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">contentView</string>
-						<object class="IBToOneOutletInfo" key="NS.object.0">
-							<string key="name">contentView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/CommonInfoView.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">FontButton</string>
-					<string key="superclassName">UIGlossyButton</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/FontButton.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">FontLabel</string>
-					<string key="superclassName">UILabel</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/FontLabel.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">UIGlossyButton</string>
-					<string key="superclassName">UIButton</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/UIGlossyButton.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
